--- a/app_pojavlauncher/src/main/res/layout/control_button_setting.xml
+++ b/app_pojavlauncher/src/main/res/layout/control_button_setting.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.kdt.DefocusableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="500dp"
     android:layout_height="match_parent"
@@ -428,7 +428,6 @@
             app:layout_constraintTop_toBottomOf="@id/checkBoxKeyCombination_ctrl"
             />
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</ScrollView>
+</com.kdt.DefocusableScrollView>
