--- a/app_pojavlauncher/src/main/res/layout/control_button_setting.xml
+++ b/app_pojavlauncher/src/main/res/layout/control_button_setting.xml
@@ -14,9 +14,10 @@
         <TextView
             android:id="@+id/editName_textView"
             android:layout_width="wrap_content"
-            android:layout_height="35dp"
+            android:layout_height="40dp"
             android:text="@string/global_name"
             android:gravity="center"
+            android:paddingEnd="5dp"
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -36,9 +37,10 @@
         <TextView
             android:id="@+id/editSize_textView"
             android:layout_width="wrap_content"
-            android:layout_height="35dp"
+            android:layout_height="45dp"
             android:gravity="center"
             android:text="@string/customctrl_size"
+            android:paddingEnd="5dp"
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/editName_textView"
@@ -82,7 +84,8 @@
             android:layout_width="wrap_content"
             android:layout_height="70dp"
             android:text="@string/customctrl_mapping"
-            android:gravity="center"
+            android:paddingTop="8dp"
+            android:paddingEnd="5dp"
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/editSize_textView"/>
@@ -101,6 +104,21 @@
             app:layout_constraintEnd_toStartOf="@id/editMapping_spinner_2"
             app:layout_constraintBottom_toTopOf="@id/editMapping_spinner_3"/>
 
+
+        <TextView
+            android:id="@+id/editMapping_plus_1"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:text="+"
+            android:gravity="center"
+
+            app:layout_constraintStart_toEndOf="@id/editMapping_spinner_1"
+            app:layout_constraintEnd_toStartOf="@id/editMapping_spinner_2"
+            app:layout_constraintTop_toTopOf="@id/editMapping_textView"
+            app:layout_constraintBottom_toBottomOf="@id/editMapping_spinner_1"
+            />
+
+
         <Spinner
             android:id="@+id/editMapping_spinner_2"
             android:layout_width="0dp"
@@ -110,7 +128,20 @@
             app:layout_constraintStart_toEndOf="@id/editMapping_spinner_1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/editMapping_textView"
-            app:layout_constraintBottom_toTopOf="@id/editMapping_spinner_4"
+            app:layout_constraintBottom_toBottomOf="@id/editMapping_spinner_1"
+            />
+
+        <TextView
+            android:id="@+id/editMapping_plus_2"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:text="+"
+            android:gravity="center"
+
+            app:layout_constraintBottom_toBottomOf="@id/editMapping_textView"
+            app:layout_constraintEnd_toEndOf="@id/editMapping_textView"
+            app:layout_constraintTop_toTopOf="@id/editMapping_spinner_3"
+
             />
 
         <Spinner
@@ -123,6 +154,21 @@
             app:layout_constraintTop_toBottomOf="@id/editMapping_spinner_1"
             app:layout_constraintBottom_toBottomOf="@id/editMapping_textView"
             app:layout_constraintEnd_toStartOf="@id/editMapping_spinner_4"/>
+
+        <TextView
+            android:id="@+id/editMapping_plus_3"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:text="+"
+            android:gravity="center"
+
+
+            app:layout_constraintBottom_toBottomOf="@id/editMapping_textView"
+            app:layout_constraintStart_toEndOf="@id/editMapping_spinner_3"
+            app:layout_constraintEnd_toStartOf="@id/editMapping_spinner_4"
+            app:layout_constraintTop_toTopOf="@id/editMapping_spinner_4"
+
+            />
 
         <Spinner
             android:id="@+id/editMapping_spinner_4"
@@ -140,9 +186,10 @@
         <TextView
             android:id="@+id/editOrientation_textView"
             android:layout_width="wrap_content"
-            android:layout_height="35dp"
+            android:layout_height="45dp"
             android:text="@string/customctrl_orientation"
             android:gravity="center"
+            android:paddingEnd="5dp"
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/editMapping_textView"
@@ -152,6 +199,7 @@
             android:id="@+id/editOrientation_spinner"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@android:color/transparent"
 
             app:layout_constraintStart_toEndOf="@id/editOrientation_textView"
             app:layout_constraintEnd_toEndOf="parent"
@@ -187,6 +235,7 @@
             android:layout_height="35dp"
             android:text="@string/customctrl_background_color"
             android:gravity="center"
+            android:paddingEnd="5dp"
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/checkboxPassThrough"
@@ -214,6 +263,7 @@
             android:layout_height="35dp"
             android:text="@string/customctrl_stroke_width"
             android:gravity="center"
+            android:paddingEnd="5dp"
 
 
             app:layout_constraintStart_toStartOf="parent"
@@ -249,6 +299,7 @@
             android:layout_height="35dp"
             android:text="@string/customctrl_stroke_color"
             android:gravity="center"
+            android:paddingEnd="5dp"
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/editStrokeWidth_textView"
@@ -276,6 +327,7 @@
             android:layout_height="35dp"
             android:text="@string/customctrl_corner_radius"
             android:gravity="center"
+            android:paddingEnd="5dp"
 
 
             app:layout_constraintStart_toStartOf="parent"
@@ -311,6 +363,7 @@
             android:layout_height="35dp"
             android:text="@string/customctrl_button_opacity"
             android:gravity="center"
+            android:paddingEnd="5dp"
 
 
             app:layout_constraintStart_toStartOf="parent"
