Add a an item into menu_customctrl.xml

--- a/app_pojavlauncher/src/main/res/menu/menu_customctrl.xml
+++ b/app_pojavlauncher/src/main/res/menu/menu_customctrl.xml
@@ -4,6 +4,10 @@
         android:title="@string/customctrl_addbutton"/>
 
     <item
+        android:id="@+id/menu_ctrl_add_drawer"
+        android:title="@string/customctrl_addbutton_drawer"/>
+
+    <item
         android:id="@+id/menu_ctrl_load"
         android:title="@string/global_load"/>
 
