Add the pointer to the main layout.

--- a/app_pojavlauncher/src/main/res/layout/main_with_customctrl.xml
+++ b/app_pojavlauncher/src/main/res/layout/main_with_customctrl.xml
@@ -39,6 +39,12 @@
 
 			</LinearLayout>
 
+			<ImageView
+				android:id="@+id/console_pointer"
+				android:layout_width="64px"
+				android:layout_height="64px"
+				app:srcCompat="@drawable/pointer" />
+
 		</net.kdt.pojavlaunch.customcontrols.ControlLayout>
 
 		<LinearLayout
