The pointer now appears only when needed.

--- a/app_pojavlauncher/src/main/res/layout/main_with_customctrl.xml
+++ b/app_pojavlauncher/src/main/res/layout/main_with_customctrl.xml
@@ -41,6 +41,7 @@
 
 			<ImageView
 				android:id="@+id/console_pointer"
+				android:visibility="invisible"
 				android:layout_width="64px"
 				android:layout_height="64px"
 				app:srcCompat="@drawable/pointer" />
