--- a/app_pojavlauncher/src/main/res/layout/main_with_customctrl.xml
+++ b/app_pojavlauncher/src/main/res/layout/main_with_customctrl.xml
@@ -41,9 +41,9 @@
 
 			<ImageView
 				android:id="@+id/console_pointer"
-				android:visibility="invisible"
-				android:layout_width="64px"
-				android:layout_height="64px"
+				android:visibility="visible"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
 				app:srcCompat="@drawable/pointer" />
 
 		</net.kdt.pojavlaunch.customcontrols.ControlLayout>
